--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -116,7 +116,7 @@ li a{
 .customNav{
 	background-color:white;
 	width:100%;
-	height:15%;
+	height:12%;
 }
 
 .sideBar{
@@ -268,8 +268,34 @@ a{
     margin-left: auto;
     margin-right: auto;
     border-radius: 5px;
-    height: 600px;
+    height: 100%;
     margin-bottom: 2.5%;
+}
+
+.imgIRoom{
+	height: 300px;
+    width: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+	border-radius:5px;
+}
+
+.imgIRoomSmall{
+	width: 47%;
+    height: 200px;
+	border-radius:5px;
+	cursor:pointer;
+}
+
+.imgIRoomSmall:first-child{
+	margin-right:6%;
+	margin-bottom:2%;
+}
+
+.imgIRoomSmall:last-child{
+	margin-left:6%;
+	margin-bottom:2.5%;
 }
 
 @media screen and (max-width:1600px){
