--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -53,10 +53,6 @@ body{
 	margin-top:-15px;
 }
 
-.logo:hover{
-	background-image: url(/images/header/logoHover.png);
-}
-
 .headerLine{
 	background-color: white;
     width: 100%;
@@ -272,6 +268,17 @@ a{
     margin-bottom: 2.5%;
 }
 
+.loginImg{
+	background-image: url(/images/header/stardustLogo.png);
+	height: 150px;
+    width: 25%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .imgIRoom{
 	height: 300px;
     width: 50%;
@@ -296,6 +303,11 @@ a{
 .imgIRoomSmall:last-child{
 	margin-left:6%;
 	margin-bottom:2.5%;
+}
+
+.btnLogin{
+	width:20%;
+	margin-left:auto;
 }
 
 @media screen and (max-width:1600px){
@@ -358,6 +370,12 @@ a{
         }
 }
 
+@media screen and (max-width:800px){
+	.loginImg{
+		width:35%;
+	}
+}
+
 @media screen and (max-width: 600px){
     .customNav{
         height:17%;
@@ -380,6 +398,17 @@ a{
 }
 
 @media screen and (max-width: 500px){
-    
+    .loginImg{
+		width:50%;
+	}
+	.btnLogin{
+		width:40%;
+	}
+}
+
+@media screen and (max-width:300px){
+	.loginImg{
+		width:90%;
+	}
 }
 
